src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

*:focus {
  outline: none;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

input,
button,
textarea,
select {
  font: inherit;
}

:root {
  --color-background: hsl(60, 10%, 96%);
  --color-heading: hsl(232, 33%, 4%);
  --color-subheading: hsla(232, 33%, 4%, 0.5);
  --color-border-hover: hsl(222, 50%, 80%);
  --color-placeholder: hsl(227, 56%, 60%);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--color-background);
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

